sidenav should be invisible when hidden to avoid being seen when user overscrolls vertically to start of page

--- a/styles/_sidenav.scss
+++ b/styles/_sidenav.scss
@@ -9,6 +9,7 @@
   overflow-x: hidden;
   transition: 0.5s;
   line-height: 1.42857143;
+  visibility: hidden;
 
   .main {
 
